tth-sdo/main/default/objects/Case/fields/Concerned_quantity__c.field-meta.xml
<CustomField>
    <fullName>Concerned_quantity__c</fullName>
    <label>Concerned quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>