tth-sdo/main/default/objects/Case/fields/Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Indicator__c</fullName>
    <formula>IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Status, 
&quot;New&quot;, &quot;0156g000001GtsJ&amp;oid=00D6g000005k3Uz&quot;, 
&quot;Working&quot;,&quot;0156g000001GtsK&amp;oid=00D6g000005k3Uz&quot;,
&quot;Waiting on customer&quot;, &quot;0156g000001GtsL&amp;oid=00D6g000005k3Uz&quot;,
&quot;Response Received&quot;,&quot;0156g000001GtsM&amp;oid=00D6g000005k3Uz&quot;,
&quot;Escalated&quot;, &quot;0156g000001GtsN&amp;oid=00D6g000005k3Uz&quot;, 
&quot;Warning&quot;,&quot;0156g000001GtsO&amp;oid=00D6g000005k3Uz&quot;,
&quot;Violation&quot;,&quot;0156g000001GtsP&amp;oid=00D6g000005k3Uz&quot;,
&quot;Closed in Portal&quot;, &quot;0156g000001GtsQ&amp;oid=00D6g000005k3Uz&quot;,
&quot;Closed&quot;,&quot;0156g000001GtsQ&amp;oid=00D6g000005k3Uz&quot;,
&quot;Closed - First Call&quot;, &quot;0156g000001GtsQ&amp;oid=00D6g000005k3Uz&quot;,
&quot;Submitting Feature&quot;,&quot;0156g000001GtsN&amp;oid=00D6g000005k3Uz&quot;,
&quot;0156g000001GtsJ&amp;oid=00D6g000005k3Uz&quot;),&quot;Status&quot;,24,24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator</label>
    <type>Text</type>
</CustomField>